Caching fonts in service worker, logo, renaming modules, menu drawer, color palette.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <meta name="msapplication-TileColor" content="#3f51b5">
     <meta name="msapplication-tap-highlight" content="no">
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+
     <script>
       // Setup Polymer options
       window.Polymer = {
@@ -82,7 +85,7 @@
       }
     </script>
 
-    <link rel="import" href="/src/my-app.html">
+    <link rel="import" href="/src/ss-app.html">
 
     <style>
       body {
@@ -90,11 +93,10 @@
         font-family: 'Roboto', 'Noto', sans-serif;
         line-height: 1.5;
         min-height: 100vh;
-        background-color: #eeeeee;
       }
     </style>
   </head>
   <body>
-    <my-app></my-app>
+    <ss-app></ss-app>
   </body>
 </html>
