--- a/src/pages/tours.html
+++ b/src/pages/tours.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view1">
+<dom-module id="ss-tours">
   <template>
     <style include="shared-styles">
       :host {
@@ -45,7 +45,7 @@
 
   <script>
     Polymer({
-      is: 'my-view1'
+      is: 'ss-tours'
     });
   </script>
 </dom-module>
