--- a/src/ss-app.html
+++ b/src/ss-app.html
@@ -115,7 +115,7 @@
           </div>
         </paper-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="trips" href="/tours">Tours</a>
+          <a name="tours" href="/tours">Tours</a>
           <a name="lower-silesia" href="/lower-silesia">Lower Silesia</a>
           <a name="offer" href="/offer">Offer</a>
           <a name="testimonials" href="/testimonials">Testimonials</a>
@@ -140,12 +140,9 @@
         <iron-pages
             selected="[[page]]"
             attr-for-selected="name"
-            fallback-selection="view404"
+            fallback-selection="tours"
             role="main">
           <ss-tours name="tours"></ss-tours>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
-          <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
@@ -169,7 +166,7 @@
 
       _routePageChanged: function(page) {
         this.$.drawer.close();
-        this.page = page || 'trips';
+        this.page = page || 'tours';
       },
 
       _pageChanged: function(page) {
@@ -179,7 +176,7 @@
       },
 
       _showPage404: function() {
-        this.page = 'view404';
+        this.page = 'tours';
       }
     });
   </script>
