--- a/src/pages/tours.html
+++ b/src/pages/tours.html
@@ -1,51 +1,103 @@
-<link rel="import" href="/bower_components/polymer/polymer.html">
-<link rel="import" href="shared-styles.html">
+<link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../../bower_components/marked-element/marked-element.html">
+<link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/paper-styles/color.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymerfire/firebase-app.html">
+<link rel="import" href="../../bower_components/polymerfire/firebase-auth.html">
+<link rel="import" href="../../bower_components/polymerfire/firebase-query.html">
+<link rel="import" href="../ss-styles.html">
 
 <dom-module id="ss-tours">
   <template>
-    <style include="shared-styles">
+    <style include="ss-styles iron-flex iron-flex-alignment">
       :host {
         display: block;
-
-        padding: 10px;
+        padding: 32px;
+      }
+      .tour {
+        width: 100%;
+        margin-bottom: 16px;
+        --paper-card-header-text: {
+          color: #fff;
+          background-color: rgba(0, 0, 0, 0.6);
+          width: 100%;
+        }
       }
     </style>
 
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
+    <firebase-app api-key="AIzaSyDdJn7hjSl6jW285Nn8jYam2s0rlkopVlA"
+      auth-domain="com-slowersilesia.firebaseapp.com"
+      database-url="https://com-slowersilesia.firebaseio.com">
+    </firebase-app>
+    <firebase-auth></firebase-auth>
+    <firebase-query path="/tours"
+      data="{{_tours}}"
+      log>
+    </firebase-query>
+
+    <iron-selector
+      multi
+      selected-items="{{_selected}}">
+      <template is="dom-repeat" items="{{_tours}}">
+        <paper-card class="tour"
+          elevation="4"
+          heading="[[item.title]]"
+          image="../../images/tours/[[item.image]]">
+          <iron-collapse class="card-content">
+            <marked-element markdown="[[item.md]]">
+              <div class="markdown-html"></div>
+            </marked-element>
+          </iron-collapse>
+        </paper-card>
+      </template>
+      <template is="dom-repeat" items="{{_tours}}">
+        <paper-card class="tour"
+          elevation="4"
+          heading="[[item.title]]"
+          image="../../images/tours/[[item.image]]">
+          <iron-collapse class="card-content">
+            <marked-element markdown="[[item.md]]">
+              <div class="markdown-html"></div>
+            </marked-element>
+          </iron-collapse>
+        </paper-card>
+      </template>
+      <template is="dom-repeat" items="{{_tours}}">
+        <paper-card class="tour"
+          elevation="4"
+          heading="[[item.title]]"
+          image="../../images/tours/[[item.image]]">
+          <iron-collapse class="card-content">
+            <marked-element markdown="[[item.md]]">
+              <div class="markdown-html"></div>
+            </marked-element>
+          </iron-collapse>
+        </paper-card>
+      </template>
+    </iron-selector>
   </template>
 
   <script>
     Polymer({
-      is: 'ss-tours'
+      is: 'ss-tours',
+      properties: {
+        _selected: {
+          type: Array,
+          observer: "_selectedChanged"
+        },
+        all: {
+          type: Object,
+          observer: "_allChanged"
+        }
+      },
+      _selectedChanged: function(selected) {
+        selected.forEach(function(e) {
+          e.querySelector('iron-collapse').opened = true;
+        });
+      },
     });
   </script>
 </dom-module>
