--- a/src/ss-app.html
+++ b/src/ss-app.html
@@ -1,4 +1,3 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
@@ -7,12 +6,14 @@
 <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/paper-styles/typography.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 
 <dom-module id="ss-app">
   <template>
@@ -37,7 +38,8 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 45%;
+        height: 45vh;
+        overflow: hidden;
         background-color: var(--app-primary-dark-color);
         --app-header-background-front-layer: {
           background-image: url(/images/background.jpg);
@@ -46,9 +48,29 @@
       }
 
       [main-title] {
-       font-weight: lighter;
-        margin-left: 108px;
+        margin: -38px 48px 0 48px;
+        height: 100%;
+        font-family: 'Great Vibes', cursive;
+        font-weight: bolder;
+        text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
       }
+      [main-title] .logo-text {
+        font-size: 14vmin;
+      }
+      [main-title] .logo-subtitle {
+        position: absolute;
+        top: 14vmin;
+        left: 26vmin;
+        font-size: 4vmin;
+      }
+      [main-title] .logo-slogan {
+        position: absolute;
+        top: 33vh;
+        font-size: 3vmin;
+        white-space: normal;
+        @apply --paper-font-common-base;
+      }
+
       [condensed-title] {
         font-weight: lighter;
         margin-left: 30px;
@@ -72,9 +94,9 @@
       }
 
       app-drawer paper-toolbar .logo .logo-text {
-        width:70%;
         font-family: 'Great Vibes', cursive;
-        font-size: 2.7vw;
+        font-size: 50px;
+        width:70%;
         line-height: 1.0;
         vertical-align: middle;
       }
@@ -110,7 +132,6 @@
       <app-drawer id="drawer" swipe-open>
         <paper-toolbar class="tall">
           <div class="middle logo">
-            <iron-image sizing="contain" src="/images/logo.png"></iron-image>
             <div class="logo-text"><p>SLower Silesia</p></div>
           </div>
         </paper-toolbar>
@@ -132,9 +153,11 @@
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <h4 condensed-title>Tours</h4>
           </app-toolbar>
-          <app-toolbar class="tall">
-            <h1 main-title>SLower Silesia</h1>
-          </app-toolbar>
+          <div main-title>
+            <div class="logo-text">SLower Silesia</div>
+            <div class="logo-subtitle">tailor-made guided tours</div>
+            <div class="logo-slogan">We all travel for a reason - whatever YOUR reason might be - we are here for you.</div>
+          </div>
         </app-header>
 
         <iron-pages
@@ -143,6 +166,8 @@
             fallback-selection="tours"
             role="main">
           <ss-tours name="tours"></ss-tours>
+          <ss-about-us name="about-us"></ss-about-us>
+          <ss-lower-silesia name="lower-silesia"></ss-lower-silesia>
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
