--- a/src/pages/tours.html
+++ b/src/pages/tours.html
@@ -1,12 +1,10 @@
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../../bower_components/marked-element/marked-element.html">
 <link rel="import" href="../../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../../bower_components/paper-styles/color.html">
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/polymerfire/firebase-app.html">
-<link rel="import" href="../../bower_components/polymerfire/firebase-auth.html">
 <link rel="import" href="../../bower_components/polymerfire/firebase-query.html">
 <link rel="import" href="../ss-styles.html">
 
@@ -28,43 +26,11 @@
       }
     </style>
 
-    <firebase-app api-key="AIzaSyDdJn7hjSl6jW285Nn8jYam2s0rlkopVlA"
-      auth-domain="com-slowersilesia.firebaseapp.com"
-      database-url="https://com-slowersilesia.firebaseio.com">
-    </firebase-app>
-    <firebase-auth></firebase-auth>
     <firebase-query path="/tours"
-      data="{{_tours}}"
-      log>
+      data="{{_tours}}">
     </firebase-query>
 
-    <iron-selector
-      multi
-      selected-items="{{_selected}}">
-      <template is="dom-repeat" items="{{_tours}}">
-        <paper-card class="tour"
-          elevation="4"
-          heading="[[item.title]]"
-          image="../../images/tours/[[item.image]]">
-          <iron-collapse class="card-content">
-            <marked-element markdown="[[item.md]]">
-              <div class="markdown-html"></div>
-            </marked-element>
-          </iron-collapse>
-        </paper-card>
-      </template>
-      <template is="dom-repeat" items="{{_tours}}">
-        <paper-card class="tour"
-          elevation="4"
-          heading="[[item.title]]"
-          image="../../images/tours/[[item.image]]">
-          <iron-collapse class="card-content">
-            <marked-element markdown="[[item.md]]">
-              <div class="markdown-html"></div>
-            </marked-element>
-          </iron-collapse>
-        </paper-card>
-      </template>
+    <iron-selector multi selected-items="{{_selected}}">
       <template is="dom-repeat" items="{{_tours}}">
         <paper-card class="tour"
           elevation="4"
